implement edit schedule store updates

--- a/projects/app/src/app/schedules/components/schedule-item/schedule-item.component.html
+++ b/projects/app/src/app/schedules/components/schedule-item/schedule-item.component.html
@@ -17,4 +17,5 @@
   [schedules]="schedules"
   [movies]="movies$ | async"
   (onCancel)="cancelHandler()"
+  (onSubmit)="submitHandler($event)"
 ></app-schedule-form>
