--- a/projects/app/src/app/movies/movies-page/movies-page.component.html
+++ b/projects/app/src/app/movies/movies-page/movies-page.component.html
@@ -1,4 +1,4 @@
-<span class="text-3xl">Manage Movies</span>
+<div class="text-3xl">Manage Movies</div>
 
 <div class="w-full flex flex-row space-x-2 mt-10">
   <div class="w-5/12">
