--- a/projects/app/src/app/schedules/components/schedules-side/schedules-side.component.html
+++ b/projects/app/src/app/schedules/components/schedules-side/schedules-side.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="bg-base-100 rounded-lg p-5">
   <form [formGroup]="selectForm">
     <select
       class="select select-bordered select-lg w-full"
