--- a/projects/app/src/app/movies/components/movie-list/movie-list.component.html
+++ b/projects/app/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,15 +1,17 @@
-<button class="btn btn-block" (click)="searchClick()">Search for Movie</button>
-<div class="divider"></div>
-<ul class="menu w-full shadow-none">
-  <li class="my-1"
-  *ngFor="let movie of movies; index as i">
-    <app-list-menu-item class="rounded-md"
-      [itemId]="movie.id"
-      [title]="movie.title"
-      [subtitle]="movie.releaseDate | date: 'mediumDate'"
-      (onClick)="itemClickHandler($event)"
-      (onDelete)="itemDeleteHandler($event)"
-      [ngClass]="{ active: i === activeMovieId }"
-    ></app-list-menu-item>
-  </li>
-</ul>
+<div class="bg-base-100 rounded-lg p-5">
+  <button class="btn btn-block" (click)="searchClick()">Search for Movie</button>
+  <div class="divider"></div>
+  <ul class="menu w-full shadow-none">
+    <li class="my-1" *ngFor="let movie of movies; index as i">
+      <app-list-menu-item
+        class="rounded-md"
+        [itemId]="movie.id"
+        [title]="movie.title"
+        [subtitle]="movie.releaseDate | date: 'mediumDate'"
+        (onClick)="itemClickHandler($event)"
+        (onDelete)="itemDeleteHandler($event)"
+        [ngClass]="{ active: i === activeMovieId }"
+      ></app-list-menu-item>
+    </li>
+  </ul>
+</div>
