--- a/projects/app/src/app/schedules/schedules-page/schedules-page.component.html
+++ b/projects/app/src/app/schedules/schedules-page/schedules-page.component.html
@@ -1,16 +1,10 @@
 <span class="text-3xl">Manage Schedules</span>
 
 <div class="w-full flex flex-row space-x-2 mt-10">
-  <div class="w-5/12">
-    <app-schedules-side></app-schedules-side>
-    <!-- <app-cinema-list
-      [cinemas]="cinemas$ | async"
-      [activeCinemaId]="activeCinemaId$ | async"
-    ></app-cinema-list> -->
+  <div class="w-4/12">
+    <app-schedules-side class="mr-10"></app-schedules-side>
   </div>
-  <div class="w-7/12">
-    <div class="w-full">
-      <router-outlet></router-outlet>
-    </div>
+  <div class="main-content">
+    <router-outlet></router-outlet>
   </div>
 </div>
