--- a/projects/app/src/styles.css
+++ b/projects/app/src/styles.css
@@ -9,6 +9,19 @@
   outline: none;
 }
 
+.main-content {
+  @apply bg-base-100 rounded-lg p-5 w-8/12;
+  height: 70vh;
+}
+
+/* [data-theme='dark'] body {
+  background: linear-gradient(135deg, hsla(224, 75%, 45%, 1) 0%, hsla(324, 75%, 45%, 1) 100%);
+}
+
+[data-theme='light'] body {
+  background: linear-gradient(135deg, hsla(171, 87%, 67%, 1) 0%, hsla(236, 100%, 72%, 1) 100%);
+} */
+
 /* body {
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
