enable gradient bg and align footer

--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-base-200/10 flex justify-center">
+<div class="bg-base-200/10 hover:bg-base-200/70 flex justify-center transition duration-500">
   <div class="navbar max-w-6xl">
     <div class="navbar-start">
       <div class="dropdown">
@@ -19,7 +19,7 @@
           </svg>
         </label>
       </div>
-      <a class="btn btn-ghost normal-case text-xl" routerLink="/">Gala Web</a>
+      <a class="btn btn-ghost normal-case text-xl" routerLink="/">Orca - Admin</a>
     </div>
     <div class="navbar-center hidden md:flex">
       <ul class="menu menu-horizontal p-0">
