adjustments to movies module

--- a/projects/app/src/app/movies/movies-page/movies-page.component.html
+++ b/projects/app/src/app/movies/movies-page/movies-page.component.html
@@ -7,6 +7,8 @@
       [movies]="movies$ | async"
       [activeMovieId]="activeMovieId$ | async"
       (onSearch)="searchClicked()"
+      (onItemClick)="itemClickHandler($event)"
+      (onItemDelete)="itemDeleteHandler($event)"
     ></app-movie-list>
   </div>
   <div class="main-content">
