--- a/projects/app/src/app/movies/components/search-movie-form/search-movie-form.component.html
+++ b/projects/app/src/app/movies/components/search-movie-form/search-movie-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="searchMovieForm" (ngSubmit)="submitHandler()">
   <div class="form-control">
-    <div class="input-group input-group-lg">
+    <div class="input-group input-group-lg" style="min-width: 500px;">
       <input
         type="text"
         placeholder="Search…"
@@ -8,20 +8,10 @@
         formControlName="queryTitle"
       />
       <button class="btn btn-lg" [disabled]="!searchMovieForm.valid" type="submit">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-          />
-        </svg>
+        <!-- prettier-ignore -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+          </svg>
       </button>
     </div>
   </div>
