--- a/projects/app/src/app/movies/components/search-movie-item/search-movie-item.component.html
+++ b/projects/app/src/app/movies/components/search-movie-item/search-movie-item.component.html
@@ -8,13 +8,11 @@
   <div class="mt-2">
     <button
       class="btn btn-success btn-outline btn-block"
-      (click)="onAddMovie()"
+      (click)="addMovieHandler()"
       *ngIf="!isMovieAdded"
     >
       + Add Movie
     </button>
-    <button class="btn btn-success btn-disabled btn-block" *ngIf="isMovieAdded">
-      Added
-    </button>
+    <button class="btn btn-success btn-disabled btn-block" *ngIf="isMovieAdded">Added</button>
   </div>
 </div>
