--- a/projects/app/src/app/movies/movies-search/movies-search.component.html
+++ b/projects/app/src/app/movies/movies-search/movies-search.component.html
@@ -1,15 +1,17 @@
-<app-search-movie-form class="w-3/5"
-  (onSearch)="searchHandler($event)"
-></app-search-movie-form>
+<div class="flex justify-center">
+  <app-search-movie-form (onSearch)="searchHandler($event)"></app-search-movie-form>
+</div>
 
 <!-- Display Results -->
 <div
-  class="max-w-5xl mx-auto flex flex-row flex-wrap mt-5"
+  class="max-w-5xl mx-auto flex flex-row flex-wrap justify-center mt-5"
   *ngIf="(searchResponse$ | async)?.results"
 >
-  <app-search-movie-item class="m-2 mt-8"
+  <app-search-movie-item
+    class="m-2 mt-8"
     *ngFor="let item of (searchResponse$ | async)?.results"
     [resultItem]="item"
+    (onAddMovie)="addMovieHandler($event)"
   >
   </app-search-movie-item>
 </div>
