--- a/projects/app/src/app/movies/movie-edit/movie-edit.component.html
+++ b/projects/app/src/app/movies/movie-edit/movie-edit.component.html
@@ -1,30 +1,36 @@
-<form [formGroup]="movieForm" (ngSubmit)="submitHandler()">
+<div class="text-2xl mb-5">Edit Details</div>
+<form class="space-y-2" [formGroup]="movieForm" (ngSubmit)="submitHandler()">
   <div class="form-control">
     <label class="input-group">
-      <span>Title</span>
-      <input class="input input-bordered" formControlName="title" />
+      <span class="w-40">Title</span>
+      <input class="input input-bordered w-full" formControlName="title" />
     </label>
   </div>
 
   <div class="form-control">
     <label class="input-group">
-      <span class="rounded-r-none rounded-b-none">Release Date</span>
-      <select
-        class="select select-bordered rounded-none"
-        formControlName="releaseMonth"
-      >
+      <span class="w-40">Backdrop</span>
+      <input class="input input-bordered w-full" formControlName="backdropUrl" />
+    </label>
+  </div>
+
+  <div class="form-control">
+    <label class="input-group">
+      <span class="w-40">Poster</span>
+      <input class="input input-bordered w-full" formControlName="posterUrl" />
+    </label>
+  </div>
+
+  <div class="form-control">
+    <label class="input-group">
+      <span class="rounded-r-none rounded-b-none w-40">Release Date</span>
+      <select class="select select-bordered rounded-none" formControlName="releaseMonth">
         <option *ngFor="let item of monthOptions; index as i" [value]="i">
           {{ item }}
         </option>
       </select>
-      <select
-        class="select select-bordered rounded-none"
-        formControlName="releaseDay"
-      >
-        <option
-          *ngFor="let item of dayOptions$ | async; index as i"
-          [value]="i"
-        >
+      <select class="select select-bordered rounded-none" formControlName="releaseDay">
+        <option *ngFor="let item of dayOptions$ | async; index as i" [value]="i">
           {{ item }}
         </option>
       </select>
@@ -38,24 +44,8 @@
 
   <div class="form-control">
     <label class="input-group">
-      <span>Runtime (Mins)</span>
+      <span class="w-40">Runtime (Mins)</span>
       <input class="input input-bordered" formControlName="runtime" />
-    </label>
-  </div>
-
-  <div class="form-control">
-    <label class="input-group">
-      <span>Backdrop</span>
-      <input
-        class="input input-bordered w-full"
-        formControlName="backdropUrl"
-      />
-    </label>
-  </div>
-  <div class="form-control">
-    <label class="input-group">
-      <span>Poster</span>
-      <input class="input input-bordered w-full" formControlName="posterUrl" />
     </label>
   </div>
 
@@ -63,26 +53,18 @@
     <label class="label">
       <span>Tagline</span>
     </label>
-    <textarea
-      class="textarea textarea-bordered w-full"
-      formControlName="tagline"
-    ></textarea>
+    <textarea class="textarea textarea-bordered w-full" formControlName="tagline"></textarea>
   </div>
 
   <div class="form-control">
     <label class="label">
       <span>Overview</span>
     </label>
-    <textarea
-      class="textarea textarea-bordered w-full"
-      formControlName="overview"
-    ></textarea>
+    <textarea class="textarea textarea-bordered w-full" formControlName="overview"></textarea>
   </div>
 
-  <div class="flex flex-row w-full mt-10 space-x-2">
-    <button type="button" class="btn btn-error w-1/2" (click)="cancelHandler()">Cancel</button>
-    <button type="submit" class="btn btn-success w-1/2" [disabled]="!movieForm.valid">
-      Save
-    </button>
+  <div class="flex flex-row pt-5 space-x-2">
+    <button type="submit" class="btn btn-success w-24" [disabled]="!movieForm.valid">Save</button>
+    <button type="button" class="btn btn-error w-24" (click)="cancelHandler()">Cancel</button>
   </div>
 </form>
