--- a/projects/app/src/app/schedules/components/schedules-side/schedules-side.component.html
+++ b/projects/app/src/app/schedules/components/schedules-side/schedules-side.component.html
@@ -1,5 +1,5 @@
 <div class="bg-base-100 rounded-lg p-5">
-  <form [formGroup]="selectForm">
+  <form class="space-y-5" [formGroup]="selectForm">
     <select
       class="select select-bordered select-lg w-full"
       formControlName="cinema"
