--- a/projects/app/src/app/movies/movie-detail/movie-detail.component.html
+++ b/projects/app/src/app/movies/movie-detail/movie-detail.component.html
@@ -1,9 +1,6 @@
 <div>
   <div class="text-center">
-    <div
-      class="h-80 rounded-t-md bg-cover"
-      style="background:url({{backdropImageUrl}})"
-    >
+    <div class="h-80 rounded-t-md bg-cover" style="background:url({{backdropImageUrl}})">
       <div
         class="h-80 bg-gradient-to-t from-base-100 via-transparent flex flex-row place-items-center"
       >
@@ -14,9 +11,7 @@
       </div>
     </div>
     <div class="-translate-y-8">
-      <span class="text-4xl"
-        >{{ movie.title }} ({{ movie.releaseDate | date: "YYYY" }})</span
-      >
+      <span class="text-4xl">{{ movie.title }} ({{ movie.releaseDate | date: "YYYY" }})</span>
       <div class="flex flex-row justify-center space-x-2 mt-5">
         <div class="badge badge-accent">Genre</div>
         <div class="badge badge-warning">Rating</div>
@@ -38,7 +33,5 @@
     </article>
   </div>
 
-  <button class="btn btn-primary btn-block mt-4" (click)="editHandler()">
-    Edit Details
-  </button>
+  <button class="btn btn-primary btn-block mt-4" (click)="editHandler()">Edit Details</button>
 </div>
