--- a/projects/app/src/app/shared/list-menu-item/list-menu-item.component.html
+++ b/projects/app/src/app/shared/list-menu-item/list-menu-item.component.html
@@ -6,20 +6,12 @@
     </div>
     <div class="flex-none">
       <button
-        class="btn btn-link btn-xs text-error/50 hover:text-error/100"
+        class="btn btn-link btn-xs text-base-content hover:text-error"
         (click)="deleteHandler()"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5"
-          viewBox="0 0 20 20"
-          fill="currentColor"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 000 2h6a1 1 0 100-2H7z"
-            clip-rule="evenodd"
-          />
+        <!-- prettier-ignore -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 9a1 1 0 000 2h6a1 1 0 100-2H7z" clip-rule="evenodd"/>
         </svg>
       </button>
     </div>
