--- a/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
+++ b/projects/app/src/app/cinemas/components/add-new-item/add-new-item.component.html
@@ -20,7 +20,7 @@
       <div class="w-full flex flex-row items-center">
         <div class="w-full">
           <input
-            class="input input-bordered"
+            class="input input-bordered w-full"
             name="name"
             placeholder="{{ placeholder }}"
             formControlName="name"
