--- a/projects/app/src/app/cinemas/components/cinema-edit-form/cinema-edit-form.component.html
+++ b/projects/app/src/app/cinemas/components/cinema-edit-form/cinema-edit-form.component.html
@@ -6,7 +6,12 @@
     >
   </div>
   <div class="grow-0" [ngClass]="{hidden: isFormShown}">
-    <button class="btn" (click)="startEditHandler()">Edit</button>
+    <button class="btn" (click)="startEditHandler()">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+      </svg>
+      Edit</button>
   </div>
 </div>
 
@@ -16,19 +21,31 @@
       <div class="form-control">
         <label class="input-group">
           <span class="w-24">Name*</span>
-          <input class="input input-bordered w-96" formControlName="name" />
+          <input class="input input-bordered w-full" formControlName="name" />
         </label>
       </div>
       <div class="form-control">
         <label class="input-group">
           <span class="w-24">Location</span>
-          <input class="input input-bordered w-96" formControlName="location" />
+          <input class="input input-bordered w-full" formControlName="location" />
         </label>
       </div>
     </div>
-    <div class="bg-base-200 p-2 rounded-b-md space-x-2 text-right">
-      <button type="submit" class="btn btn-primary">Submit</button>
-      <button type="button" class="btn btn-error" (click)="cancelHandler()">Cancel</button>
+    <div class="space-x-2 text-right">
+      <button type="submit" class="btn btn-success">
+        <!-- prettier-ignore -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+        </svg>
+        Submit
+      </button>
+      <button type="button" class="btn btn-error" (click)="cancelHandler()">
+        <!-- prettier-ignore -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+        </svg>
+        Cancel
+      </button>
     </div>
   </form>
 </div>
