--- a/projects/app/src/app/cinemas/components/cinema-list/cinema-list.component.html
+++ b/projects/app/src/app/cinemas/components/cinema-list/cinema-list.component.html
@@ -6,6 +6,9 @@
     (onSubmit)="addCinemaHandler($event)"
   ></app-add-new-item>
   <div class="divider"></div>
+  <div class="text-center" *ngIf="cinemas?.length == 0">
+    No cinemas found. Add cinemas and rooms first before scheduling shows.
+  </div>
   <ul class="menu w-full shadow-none">
     <li class="my-1" *ngFor="let cinema of cinemas; index as i">
       <app-list-menu-item
