--- a/projects/app/src/app/movies/components/movie-list/movie-list.component.html
+++ b/projects/app/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,6 +1,9 @@
 <div class="bg-base-100 rounded-lg p-5">
   <button class="btn btn-block" (click)="searchClick()">Search for Movie</button>
   <div class="divider"></div>
+  <div class="text-center" *ngIf="movies?.length == 0">
+    No movies yet. Search for movies to start scheduling them.
+  </div>
   <ul class="menu w-full shadow-none">
     <li class="my-1" *ngFor="let movie of movies; index as i">
       <app-list-menu-item
