--- a/projects/app/src/app/movies/movie-edit/movie-edit.component.html
+++ b/projects/app/src/app/movies/movie-edit/movie-edit.component.html
@@ -63,8 +63,20 @@
     <textarea class="textarea textarea-bordered w-full" formControlName="overview"></textarea>
   </div>
 
-  <div class="flex flex-row pt-5 space-x-2">
-    <button type="submit" class="btn btn-success w-24" [disabled]="!movieForm.valid">Save</button>
-    <button type="button" class="btn btn-error w-24" (click)="cancelHandler()">Cancel</button>
+  <div class="flex flex-row pt-5 space-x-2 justify-end">
+    <button type="submit" class="btn btn-success w-32" [disabled]="!movieForm.valid">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+      </svg>
+      Save
+    </button>
+    <button type="button" class="btn btn-error w-32" (click)="cancelHandler()">
+      <!-- prettier-ignore -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+      </svg>
+      Cancel
+    </button>
   </div>
 </form>
