--- a/projects/app/src/app/navbar/navbar.component.html
+++ b/projects/app/src/app/navbar/navbar.component.html
@@ -22,11 +22,11 @@
       <a class="btn btn-ghost normal-case text-xl" routerLink="/">Orca - Admin</a>
     </div>
     <div class="navbar-center hidden md:flex">
-      <ul class="menu menu-horizontal p-0">
-        <li><a routerLink="/home">Home</a></li>
-        <li><a routerLink="/movies">Movies</a></li>
-        <li><a routerLink="/cinemas">Cinemas</a></li>
-        <li><a routerLink="/schedules">Schedules</a></li>
+      <ul class="menu menu-horizontal p-0 space-x-2">
+        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/movies" routerLinkActive="active">Movies</a></li>
+        <li><a routerLink="/cinemas" routerLinkActive="active">Cinemas</a></li>
+        <li><a routerLink="/schedules" routerLinkActive="active">Schedules</a></li>
       </ul>
     </div>
     <div class="navbar-end">
